--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
                 </ul>
             </div>
         </nav>
-		<img src="static/images/me.png" style="width: 100px; height: 100px;">
+		<img src="/static/images/me.png" style="width: 100px; height: 100px;">
 		<h2>RU</h2>
 		<p>Этот калькулятор создан для расчёта урона навыков персонажей. Он учитывает основные характеристики, тип цели и наличие талантов. При расчётах возможна погрешность в 1-2 единицы урона. Это не критично, если вы не ботан.</p>
 		<p>При вводе значений, указывайте напрямую числовое значение процентов (например 30 свирепости). НО, в полях ввода защиты цели указывается целочисленное значение защиты (например 9000 защиты). В разделе талантов, в скобках, например (I) или (III) указывается номер ветки талантов, что бы не возникало путаницы.</p>
