--- a/necro.html
+++ b/necro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,30 +32,30 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/897.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/897.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="magicdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -64,14 +64,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -80,7 +80,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -90,7 +90,7 @@
 
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -98,7 +98,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -107,7 +107,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/5889.webp" alt="Healing Power">
+                            <img src="/static/images/icons/5889.webp" alt="Healing Power">
                             <select id="healBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -116,35 +116,35 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2512.webp" alt="Bone Shield +">
+                            <img src="/static/images/icons/2512.webp" alt="Bone Shield +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="boneShieldBonus">
                                 <label class="custom-control-label" for="boneShieldBonus">10%</label>
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/3002.webp" alt="Infection + (I)">
+                            <img src="/static/images/icons/3002.webp" alt="Infection + (I)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="infectionBonus">
                                 <label class="custom-control-label" for="infectionBonus">2% (I)</label>
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2894.webp" alt="Poisonous Shield + (I)">
+                            <img src="/static/images/icons/2894.webp" alt="Poisonous Shield + (I)">
                             <select id="poisonShieldBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
                                 <option value="2">2%</option>
                                 <option value="3">3%</option>
                             </select>(I)
-                            <img src="static/images/icons/2894.webp" alt="Poisonous Shield + (III)" style="margin-left: 5px;">
+                            <img src="/static/images/icons/2894.webp" alt="Poisonous Shield + (III)" style="margin-left: 5px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="poisonShieldBonusIII">
                                 <label class="custom-control-label" for="poisonShieldBonusIII">3% (III)</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/2529.webp" alt="Poison Spittle + (I/II)">
+                            <img src="/static/images/icons/2529.webp" alt="Poison Spittle + (I/II)">
                             <select id="poisonSpitBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2.5">2.5%</option>
@@ -153,7 +153,7 @@
                             </select>(I/II)
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/2510.webp" alt="Ancient Seal + (II/III)">
+                            <img src="/static/images/icons/2510.webp" alt="Ancient Seal + (II/III)">
                             <select id="ancientSealBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2.5">2.5%</option>
@@ -162,7 +162,7 @@
                             </select>(II/III)
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/3458.webp" alt="Acid Rain + (III)">
+                            <img src="/static/images/icons/3458.webp" alt="Acid Rain + (III)">
                             <select id="acidRainBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -176,13 +176,13 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/896.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/896.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetMagicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                 <tr id="poisonSpittleRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/necro/poisonspit.png" alt="Poison Spittle">
+                            <img src="/static/images/necro/poisonspit.png" alt="Poison Spittle">
                         </div>
                     </td>
                     <td>0</td>
@@ -228,7 +228,7 @@
                 <tr id="poisonSpittleDotRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/necro/poisonspit.png" alt="Poison Spittle">(Dot)
+                            <img src="/static/images/necro/poisonspit.png" alt="Poison Spittle">(Dot)
                         </div>
                     </td>
                     <td>0</td>
@@ -238,7 +238,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="boneShieldRow">
-                    <td><img src="static/images/necro/boneshield.png" alt="Bone Shield"></td>
+                    <td><img src="/static/images/necro/boneshield.png" alt="Bone Shield"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -246,7 +246,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="ancientSealRow">
-                    <td><img src="static/images/necro/ancientseal.png" alt="Ancient Seal"></td>
+                    <td><img src="/static/images/necro/ancientseal.png" alt="Ancient Seal"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -254,7 +254,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="soulSynergyRow">
-                    <td><img src="static/images/necro/soulsynergy.png" alt="Soul Synergy"></td>
+                    <td><img src="/static/images/necro/soulsynergy.png" alt="Soul Synergy"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -262,42 +262,42 @@
                     <td>0</td>
                 </tr>
                 <tr id="poisonShieldRow">
-                    <td><img src="static/images/necro/poisonshield.png" alt="Poisonous Shield"></td>
+                    <td><img src="/static/images/necro/poisonshield.png" alt="Poisonous Shield"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="poisonShieldHealRow">
-                    <td><img src="static/images/necro/poisonshield.png" alt="Poisonous Shield">(Heal)</td>
+                    <td><img src="/static/images/necro/poisonshield.png" alt="Poisonous Shield">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="infectionRow">
-                    <td><img src="static/images/necro/infection.png" alt="Infection"></td>
+                    <td><img src="/static/images/necro/infection.png" alt="Infection"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="infectionMassRow">
-                    <td><img src="static/images/necro/infection.png" alt="Infection">(Mass)</td>
+                    <td><img src="/static/images/necro/infection.png" alt="Infection">(Mass)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="acidRainRow">
-                    <td><img src="static/images/necro/acidrain.png" alt="Acid Rain"></td>
+                    <td><img src="/static/images/necro/acidrain.png" alt="Acid Rain"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="pleasureOfPainRow">
-                    <td><img src="static/images/necro/pleasureofpain.png" alt="Pleasure of the Pain"></td>
+                    <td><img src="/static/images/necro/pleasureofpain.png" alt="Pleasure of the Pain"></td>
                     <td>0</td>
                 </tr>
             </tbody>
@@ -308,6 +308,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/necro.js"></script>
+    <script src="/static/js/necro.js"></script>
 </body>
 </html>
