--- a/reaper.html
+++ b/reaper.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,42 +32,42 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/95.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/95.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="physdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
 						<div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3828.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3828.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="critBoost" step="any">
                             </div>
                         </div>
 						<div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/reaper/rage.png" class="img-fluid" alt="icon">
+                                <img src="/static/images/reaper/rage.png" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="rage" min="0" max="16">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -76,14 +76,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -92,7 +92,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -101,7 +101,7 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5867.webp" alt="Long death">
+                            <img src="/static/images/icons/5867.webp" alt="Long death">
                             <select id="dotDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -110,7 +110,7 @@
                                 <option value="2">2%</option>
                             </select>
 
-                            <img src="static/images/icons/5869.webp" alt="Moment of power">
+                            <img src="/static/images/icons/5869.webp" alt="Moment of power">
                             <select id="instDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -120,7 +120,7 @@
                             </select>
                         </div>
                         <!--<div class="form-group">
-                            <img src="static/images/icons/6990.webp" alt="Incessant penetration">
+                            <img src="/static/images/icons/6990.webp" alt="Incessant penetration">
                             <select id="dotPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -128,7 +128,7 @@
                                 <option value="0.75">0.75%</option>
                             </select>
 
-                            <img src="static/images/icons/5865.webp" alt="Instant penetration">
+                            <img src="/static/images/icons/5865.webp" alt="Instant penetration">
                             <select id="instPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -137,7 +137,7 @@
                             </select>
                         </div>-->
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -145,7 +145,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -154,12 +154,12 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/6378.webp" alt="Evisceration +">
+                            <img src="/static/images/icons/6378.webp" alt="Evisceration +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="eviscerationBonus">
                                 <label class="custom-control-label" for="eviscerationBonus">5%</label>
                             </div>
-                            <img src="static/images/icons/6378.webp" alt="Evisceration + (I/II)" style="margin-left: 35px;">
+                            <img src="/static/images/icons/6378.webp" alt="Evisceration + (I/II)" style="margin-left: 35px;">
                             <select id="eviscerationBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2.5">2.5%</option>
@@ -168,7 +168,7 @@
                             </select>(I/II)
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/6392.webp" alt="Explodion of Chaos +">
+                            <img src="/static/images/icons/6392.webp" alt="Explodion of Chaos +">
                             <select id="explodionBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
@@ -177,7 +177,7 @@
                             </select>
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/6389.webp" alt="Annihilation + (II)">
+                            <img src="/static/images/icons/6389.webp" alt="Annihilation + (II)">
                             <select id="annihilationBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="3">3%</option>
@@ -191,13 +191,13 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/542.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                 <tr id="eviscerationRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/reaper/evisceration.png" alt="Evisceration">
+                            <img src="/static/images/reaper/evisceration.png" alt="Evisceration">
                         </div>
                     </td>
                     <td>0</td>
@@ -241,7 +241,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="otherworldBoostRow">
-                    <td><img src="static/images/reaper/otherworldboost.png" alt="Otherworld Boost"></td>
+                    <td><img src="/static/images/reaper/otherworldboost.png" alt="Otherworld Boost"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -249,42 +249,42 @@
 					<td>0</td>
                 </tr>
                 <tr id="annihilationRow">
-                    <td><img src="static/images/reaper/annihilation.png" alt="Annihilation"></td>
+                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
 				<tr id="annihilationCritRow">
-                    <td><img src="static/images/reaper/annihilation.png" alt="Annihilation">(Crit)</td>
+                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation">(Crit)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="widescopeRow">
-                    <td><img src="static/images/reaper/widescope.png" alt="Wide Scope"></td>
+                    <td><img src="/static/images/reaper/widescope.png" alt="Wide Scope"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="underworldHandRow">
-                    <td><img src="static/images/reaper/underworldhand.png" alt="Hand of the Underworld">(1 hit)</td>
+                    <td><img src="/static/images/reaper/underworldhand.png" alt="Hand of the Underworld">(1 hit)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="explosionOfChaosRow">
-                    <td><img src="static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos"></td>
+                    <td><img src="/static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="devastatingFlashRow">
-                    <td><img src="static/images/reaper/devastatingflash.png" alt="Devastating Flash"></td>
+                    <td><img src="/static/images/reaper/devastatingflash.png" alt="Devastating Flash"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -298,6 +298,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/reaper.js"></script>
+    <script src="/static/js/reaper.js"></script>
 </body>
 </html>
