--- a/barbarian.html
+++ b/barbarian.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,30 +32,30 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/95.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/95.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="physdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -64,14 +64,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -80,7 +80,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -90,7 +90,7 @@
 
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -98,7 +98,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -107,7 +107,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/479.webp" alt="Heavy Strike +">
+                            <img src="/static/images/icons/479.webp" alt="Heavy Strike +">
                             <select id="strikeBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
@@ -116,14 +116,14 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/1794.webp" alt="Slash +">
+                            <img src="/static/images/icons/1794.webp" alt="Slash +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="slashBonus">
                                 <label class="custom-control-label" for="slashBonus">1.5%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/1794.webp" alt="Slash + (II)">
+                            <img src="/static/images/icons/1794.webp" alt="Slash + (II)">
                             <select id="slashBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -132,7 +132,7 @@
                             </select>(II)
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/2889.webp" alt="Battle Fury +">
+                            <img src="/static/images/icons/2889.webp" alt="Battle Fury +">
                             <select id="furyBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -141,7 +141,7 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/3024.webp" alt="Crush +">
+                            <img src="/static/images/icons/3024.webp" alt="Crush +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="crushBonus">
                                 <label class="custom-control-label" for="crushBonus">5%</label>
@@ -153,13 +153,13 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/542.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                 <tr id="heavyStrikeRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/barb/heavystrike.png" alt="Heavy Strike">
+                            <img src="/static/images/barb/heavystrike.png" alt="Heavy Strike">
                         </div>
                     </td>
                     <td>0</td>
@@ -203,7 +203,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="slashRow">
-                    <td><img src="static/images/barb/slash.png" alt="Slash"></td>
+                    <td><img src="/static/images/barb/slash.png" alt="Slash"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -211,7 +211,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="dashRow">
-                    <td><img src="static/images/barb/dash.png" alt="Dash"></td>
+                    <td><img src="/static/images/barb/dash.png" alt="Dash"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -219,49 +219,49 @@
                     <td>0</td>
                 </tr>
                 <tr id="battleFuryRow">
-                    <td><img src="static/images/barb/battlefury.png" alt="Battle Fury"></td>
+                    <td><img src="/static/images/barb/battlefury.png" alt="Battle Fury"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="battleFuryTickRow">
-                    <td><img src="static/images/barb/battlefury.png" alt="Battle Fury">(tick)</td>
+                    <td><img src="/static/images/barb/battlefury.png" alt="Battle Fury">(tick)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="shieldBashRow">
-                    <td><img src="static/images/barb/shieldbash.png" alt="Shield Bash"></td>
+                    <td><img src="/static/images/barb/shieldbash.png" alt="Shield Bash"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="crushRow">
-                    <td><img src="static/images/barb/crush.png" alt="Crush"></td>
+                    <td><img src="/static/images/barb/crush.png" alt="Crush"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="crushBuffedRow">
-                    <td><img src="static/images/barb/crush.png" alt="Crush">(buffed)</td>
+                    <td><img src="/static/images/barb/crush.png" alt="Crush">(buffed)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="crushMassRow">
-                    <td><img src="static/images/barb/crush.png" alt="Crush">(mass)</td>
+                    <td><img src="/static/images/barb/crush.png" alt="Crush">(mass)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="bloodshedRow">
-                    <td><img src="static/images/barb/bloodshed.png" alt="Bloodshed"></td>
+                    <td><img src="/static/images/barb/bloodshed.png" alt="Bloodshed"></td>
                     <td>0</td>
                 </tr>
             </tbody>
@@ -272,6 +272,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/barbarian.js"></script>
+    <script src="/static/js/barbarian.js"></script>
 </body>
 </html>
