--- a/charmer.html
+++ b/charmer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,36 +32,36 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/95.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/95.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="physdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/897.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/897.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="magicdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -70,14 +70,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -86,7 +86,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -94,7 +94,7 @@
                             </select>
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/5323.webp" alt="Summoner Skill">
+                            <img src="/static/images/icons/5323.webp" alt="Summoner Skill">
                             <select id="summonerSkill" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="20">20%</option>
@@ -105,7 +105,7 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -113,7 +113,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -122,7 +122,7 @@
                             </select>
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/5889.webp" alt="Healing Power">
+                            <img src="/static/images/icons/5889.webp" alt="Healing Power">
                             <select id="healBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -131,12 +131,12 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/3929.webp" alt="Combat Healing +">
+                            <img src="/static/images/icons/3929.webp" alt="Combat Healing +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="combatHealBonus">
                                 <label class="custom-control-label" for="combatHealBonus">5%</label>
                             </div>
-							<img src="static/images/icons/3929.webp" alt="Combat Healing + (III)" style="margin-left: 35px;">
+							<img src="/static/images/icons/3929.webp" alt="Combat Healing + (III)" style="margin-left: 35px;">
                             <select id="combatHealBonusIII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -145,7 +145,7 @@
                             </select>(III)
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/3948.webp" alt="Otherworldly Fire +">
+                            <img src="/static/images/icons/3948.webp" alt="Otherworldly Fire +">
                             <select id="otherworldFireBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -154,7 +154,7 @@
                             </select>
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/3938.webp" alt="Call + (II)">
+                            <img src="/static/images/icons/3938.webp" alt="Call + (II)">
                             <select id="callBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
@@ -163,14 +163,14 @@
                             </select>(II)
                         </div>
 						<div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/3960.webp" alt="Knowledge of the Dead Man + (II)">
+                            <img src="/static/images/icons/3960.webp" alt="Knowledge of the Dead Man + (II)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="knowledgeBonus">
                                 <label class="custom-control-label" for="knowledgeBonus">5%</label>
                             </div>
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/5323.webp" alt="Summoner Skill + (II)">
+                            <img src="/static/images/icons/5323.webp" alt="Summoner Skill + (II)">
                             <select id="summonerSkillBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -179,7 +179,7 @@
                             </select>(II)
                         </div>
 						<div class="form-group">
-                            <img src="static/images/icons/3932.webp" alt="Dark Prism + (III)">
+                            <img src="/static/images/icons/3932.webp" alt="Dark Prism + (III)">
                             <select id="darkPrismBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2.5">2.5%</option>
@@ -193,19 +193,19 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/542.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/896.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/896.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetMagicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                 <tr id="darkPrismRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/charmer/darkprism.png" alt="Dark Prism">
+                            <img src="/static/images/charmer/darkprism.png" alt="Dark Prism">
                         </div>
                     </td>
                     <td>0</td>
@@ -249,7 +249,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="combatHealInstantRow">
-                    <td><img src="static/images/charmer/combathealing.png" alt="Combat Healing">(Instant)</td>
+                    <td><img src="/static/images/charmer/combathealing.png" alt="Combat Healing">(Instant)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -257,7 +257,7 @@
                     <td>0</td>
                 </tr>
 				<tr id="combatHealRow">
-                    <td><img src="static/images/charmer/combathealing.png" alt="Combat Healing"></td>
+                    <td><img src="/static/images/charmer/combathealing.png" alt="Combat Healing"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -265,7 +265,7 @@
                     <td>0</td>
                 </tr>
 				<tr id="callRow">
-                    <td><img src="static/images/charmer/call.png" alt="Call"></td>
+                    <td><img src="/static/images/charmer/call.png" alt="Call"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -273,7 +273,7 @@
 					<td>0</td>
                 </tr>
                 <tr id="oppressionRow">
-                    <td><img src="static/images/charmer/oppression.png" alt="Oppression"></td>
+                    <td><img src="/static/images/charmer/oppression.png" alt="Oppression"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -281,28 +281,28 @@
 					<td>0</td>
                 </tr>
                 <tr id="knowledgeRow">
-                    <td><img src="static/images/charmer/knowledge.png" alt="Knowledge of the Dead Man"></td>
+                    <td><img src="/static/images/charmer/knowledge.png" alt="Knowledge of the Dead Man"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="otherWorldFireRow">
-                    <td><img src="static/images/charmer/otherworldfire.png" alt="Otherworldly Fire"></td>
+                    <td><img src="/static/images/charmer/otherworldfire.png" alt="Otherworldly Fire"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="embraceOfDarknessRow">
-                    <td><img src="static/images/charmer/embraceofdarkness.png" alt="Embrace of Darkness"></td>
+                    <td><img src="/static/images/charmer/embraceofdarkness.png" alt="Embrace of Darkness"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="plaguedMinionRow">
-                    <td><img src="static/images/charmer/plaguedminion.png" alt="Plagued Minion"></td>
+                    <td><img src="/static/images/charmer/plaguedminion.png" alt="Plagued Minion"></td>
                     <td>0</td>
                 </tr>
             </tbody>
@@ -313,6 +313,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/charmer.js"></script>
+    <script src="/static/js/charmer.js"></script>
 </body>
 </html>
