--- a/deadknight.html
+++ b/deadknight.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,36 +32,36 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/95.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/95.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="physdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/897.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/897.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="magicdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -70,14 +70,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -86,7 +86,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -95,7 +95,7 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -103,7 +103,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -112,28 +112,28 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2892.webp" alt="Steel Hurricane +">
+                            <img src="/static/images/icons/2892.webp" alt="Steel Hurricane +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="steelHurricaneBonus">
                                 <label class="custom-control-label" for="steelHurricaneBonus">5% phys + 10% mag</label>
                             </div>
                         </div>
 						<div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2892.webp" alt="Steel Hurricane + (I)">
+                            <img src="/static/images/icons/2892.webp" alt="Steel Hurricane + (I)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="steelHurricaneBonusI">
                                 <label class="custom-control-label" for="steelHurricaneBonusI">9% mag (I)</label>
                             </div>
                         </div>
 						<div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2892.webp" alt="Steel Hurricane + (III)">
+                            <img src="/static/images/icons/2892.webp" alt="Steel Hurricane + (III)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="steelHurricaneBonusIII">
                                 <label class="custom-control-label" for="steelHurricaneBonusIII">7% phys + 9% mag</label>
                             </div>
                         </div>
 						<div class="form-group">
-							<img src="static/images/icons/2535.webp" alt="Exhalation of Darkness + (I)">
+							<img src="/static/images/icons/2535.webp" alt="Exhalation of Darkness + (I)">
 								<select id="exhalationBonus" class="form-select">
 									<option value="0">0%</option>
 									<option value="3">3%</option>
@@ -142,7 +142,7 @@
 								</select>(I)
 						</div>
 						<div class="form-group">
-							<img src="static/images/icons/2516.webp" alt="Thorn of Death + (III)">
+							<img src="/static/images/icons/2516.webp" alt="Thorn of Death + (III)">
 								<select id="thornOfDeathBonus" class="form-select">
 									<option value="0">0%</option>
 									<option value="2.5">2.5%</option>
@@ -151,14 +151,14 @@
 								</select>(III)
 						</div>
 						<div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/3096.webp" alt="Sharp Shadow + (II)">
+                            <img src="/static/images/icons/3096.webp" alt="Sharp Shadow + (II)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="sharpShadowBonus">
                                 <label class="custom-control-label" for="sharpShadowBonus">2% (II)</label>
                             </div>
                         </div>
 						<div class="form-group">
-							<img src="static/images/icons/5315.webp" alt="Knights Curse + (I)">
+							<img src="/static/images/icons/5315.webp" alt="Knights Curse + (I)">
 								<select id="knightsCurseBonus" class="form-select">
 									<option value="0">0%</option>
 									<option value="1.5">1.5%</option>
@@ -172,19 +172,19 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/542.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/896.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/896.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetMagicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                 <tr id="thornOfDeathRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/dk/thornofdeath.png" alt="Thorn of Death">
+                            <img src="/static/images/dk/thornofdeath.png" alt="Thorn of Death">
                         </div>
                     </td>
                     <td>0</td>
@@ -228,7 +228,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="exhalationOfDarknessRow">
-                    <td><img src="static/images/dk/exhalationofdarkness.png" alt="Exhalation of Darkness"</td>
+                    <td><img src="/static/images/dk/exhalationofdarkness.png" alt="Exhalation of Darkness"</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -236,49 +236,49 @@
                     <td>0</td>
                 </tr>
 				<tr id="steelHurricaneRow">
-                    <td><img src="static/images/dk/steelhurricane.png" alt="Steel Hurricane"></td>
+                    <td><img src="/static/images/dk/steelhurricane.png" alt="Steel Hurricane"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="enjoyingBloodRow">
-                    <td><img src="static/images/dk/enjoyingblood.png" alt="Enjoying blood"></td>
+                    <td><img src="/static/images/dk/enjoyingblood.png" alt="Enjoying blood"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="enjoyingBloodHealRow">
-                    <td><img src="static/images/dk/enjoyingblood.png" alt="Enjoying blood">(Heal)</td>
+                    <td><img src="/static/images/dk/enjoyingblood.png" alt="Enjoying blood">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="sharpShadowRow">
-                    <td><img src="static/images/dk/sharpshadow.png" alt="Sharp Shadow"></td>
+                    <td><img src="/static/images/dk/sharpshadow.png" alt="Sharp Shadow"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="sharpShadowHealRow">
-                    <td><img src="static/images/dk/sharpshadow.png" alt="Sharp Shadow">(Heal)</td>
+                    <td><img src="/static/images/dk/sharpshadow.png" alt="Sharp Shadow">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="knightsCurseRow">
-                    <td><img src="static/images/dk/knightscurse.png" alt="Knights Curse"></td>
+                    <td><img src="/static/images/dk/knightscurse.png" alt="Knights Curse"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="echoOfForsakenRow">
-                    <td><img src="static/images/dk/echoofforsaken.png" alt="Echo Of Forsaken"></td>
+                    <td><img src="/static/images/dk/echoofforsaken.png" alt="Echo Of Forsaken"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -292,6 +292,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/deadknight.js"></script>
+    <script src="/static/js/deadknight.js"></script>
 </body>
 </html>
