--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -25,40 +25,40 @@
             </div>
         </nav>
 
-        <img src="static/images/firstborn.png" alt="firstborn" class="centered-image">
+        <img src="/static/images/firstborn.png" alt="firstborn" class="centered-image">
         <div class="image-container">
-            <img src="static/images/druid/icon.png" alt="druid">
-            <img src="static/images/bd/icon.png" alt="blade dancer">
-            <img src="static/images/ranger/icon.png" alt="ranger">
-            <img src="static/images/warden/icon.png" alt="warden">
-            <img src="static/images/beast/icon.png" alt="beast">
+            <img src="/static/images/druid/icon.png" alt="druid">
+            <img src="/static/images/bd/icon.png" alt="blade dancer">
+            <img src="/static/images/ranger/icon.png" alt="ranger">
+            <img src="/static/images/warden/icon.png" alt="warden">
+            <img src="/static/images/beast/icon.png" alt="beast">
         </div>
 
-        <img src="static/images/mountainclans.png" alt="mountainclans" class="centered-image">
+        <img src="/static/images/mountainclans.png" alt="mountainclans" class="centered-image">
         <div class="image-container">
-            <a href="barbarian.html"><img src="static/images/barb/icon.png" alt="barbarian"></a>
-            <a href="rogue.html"><img src="static/images/rogue/icon.png" alt="rogue"></a>
-            <a href="shaman.html"><img src="static/images/shaman/icon.png" alt="shaman"></a>
-            <a href="hunter.html"><img src="static/images/hunter/icon.png" alt="hunter"></a>
-            <a href="chieftain.html"><img src="static/images/chieftain/icon.png" alt="chieftain"></a>
+            <a href="barbarian.html"><img src="/static/images/barb/icon.png" alt="barbarian"></a>
+            <a href="rogue.html"><img src="/static/images/rogue/icon.png" alt="rogue"></a>
+            <a href="shaman.html"><img src="/static/images/shaman/icon.png" alt="shaman"></a>
+            <a href="hunter.html"><img src="/static/images/hunter/icon.png" alt="hunter"></a>
+            <a href="chieftain.html"><img src="/static/images/chieftain/icon.png" alt="chieftain"></a>
         </div>
 
-        <img src="static/images/chosen.png" alt="chosen" class="centered-image">
+        <img src="/static/images/chosen.png" alt="chosen" class="centered-image">
         <div class="image-container">
-            <img src="static/images/paladin/icon.png" alt="paladin">
-            <img src="static/images/priest/icon.png" alt="priest">
-            <img src="static/images/mage/icon.png" alt="mage">
-            <img src="static/images/seeker/icon.png" alt="seeker">
-            <img src="static/images/templar/icon.png" alt="templar">
+            <img src="/static/images/paladin/icon.png" alt="paladin">
+            <img src="/static/images/priest/icon.png" alt="priest">
+            <img src="/static/images/mage/icon.png" alt="mage">
+            <img src="/static/images/seeker/icon.png" alt="seeker">
+            <img src="/static/images/templar/icon.png" alt="templar">
         </div>
 
-        <img src="static/images/forsaken.png" alt="forsaken" class="centered-image">
+        <img src="/static/images/forsaken.png" alt="forsaken" class="centered-image">
         <div class="image-container">
-            <a href="necro.html"><img src="static/images/necro/icon.png" alt="necromancer"></a>
-            <a href="warlock.html"><img src="static/images/warlock/icon.png" alt="warlock"></a>
-            <a href="deadknight.html"><img src="static/images/dk/icon.png" alt="dead knight"></a>
-            <a href="charmer.html"><img src="static/images/charmer/icon.png" alt="charmer"></a>
-            <a href="reaper.html"><img src="static/images/reaper/icon.png" alt="reaper"></a>
+            <a href="necro.html"><img src="/static/images/necro/icon.png" alt="necromancer"></a>
+            <a href="warlock.html"><img src="/static/images/warlock/icon.png" alt="warlock"></a>
+            <a href="deadknight.html"><img src="/static/images/dk/icon.png" alt="dead knight"></a>
+            <a href="charmer.html"><img src="/static/images/charmer/icon.png" alt="charmer"></a>
+            <a href="reaper.html"><img src="/static/images/reaper/icon.png" alt="reaper"></a>
         </div>
     </div>
 
