--- a/rogue.html
+++ b/rogue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,30 +32,30 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/95.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/95.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="physdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -64,14 +64,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -80,7 +80,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -89,7 +89,7 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5867.webp" alt="Long death">
+                            <img src="/static/images/icons/5867.webp" alt="Long death">
                             <select id="dotDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -98,7 +98,7 @@
                                 <option value="2">2%</option>
                             </select>
 
-                            <img src="static/images/icons/5869.webp" alt="Moment of power">
+                            <img src="/static/images/icons/5869.webp" alt="Moment of power">
                             <select id="instDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -108,7 +108,7 @@
                             </select>
                         </div>
                         <!--<div class="form-group">
-                            <img src="static/images/icons/6990.webp" alt="Incessant penetration">
+                            <img src="/static/images/icons/6990.webp" alt="Incessant penetration">
                             <select id="dotPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -116,7 +116,7 @@
                                 <option value="0.75">0.75%</option>
                             </select>
 
-                            <img src="static/images/icons/5865.webp" alt="Instant penetration">
+                            <img src="/static/images/icons/5865.webp" alt="Instant penetration">
                             <select id="instPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -125,7 +125,7 @@
                             </select>
                         </div>-->
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -133,7 +133,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -142,19 +142,19 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/477.webp" alt="5% dmg">
+                            <img src="/static/images/icons/477.webp" alt="5% dmg">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="strikeBonus">
                                 <label class="custom-control-label" for="strikeBonus" style="margin-right: 35px;">5%</label>
                             </div>
-                            <img src="static/images/icons/477.webp" alt="8% dmg">
+                            <img src="/static/images/icons/477.webp" alt="8% dmg">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="strikeBonusIII">
                                 <label class="custom-control-label" for="strikeBonusIII">8% (III)</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/2838.webp" alt="Elusive jump+">
+                            <img src="/static/images/icons/2838.webp" alt="Elusive jump+">
                             <select id="jumpBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
@@ -163,14 +163,14 @@
                             </select>(I)
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2891.webp" alt="Flurry of steel+">
+                            <img src="/static/images/icons/2891.webp" alt="Flurry of steel+">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="flurryBonus">
                                 <label class="custom-control-label" for="flurryBonus">7% (I)</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/6859.webp" alt="Blade echo">
+                            <img src="/static/images/icons/6859.webp" alt="Blade echo">
                             <select id="bladeEchoBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -178,7 +178,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/6861.webp" alt="Move series">
+                            <img src="/static/images/icons/6861.webp" alt="Move series">
                             <select id="seriesBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -193,13 +193,13 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/542.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                 <tr id="mercilessStrikeRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/rogue/strike.png" alt="Merciless Strike">
+                            <img src="/static/images/rogue/strike.png" alt="Merciless Strike">
                         </div>
                     </td>
                     <td>0</td>
@@ -243,70 +243,70 @@
                     <td>0</td>
                 </tr>
                 <tr id="elusiveJumpRow">
-                    <td><img src="static/images/rogue/jump.png" alt="Elusive jump"></td>
+                    <td><img src="/static/images/rogue/jump.png" alt="Elusive jump"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="elusiveJumpWithPoisonRow">
-                    <td><img src="static/images/rogue/jump.png" alt="Elusive jump"><img src="static/images/rogue/poison.png" alt="Poisonous blades"></td>
+                    <td><img src="/static/images/rogue/jump.png" alt="Elusive jump"><img src="/static/images/rogue/poison.png" alt="Poisonous blades"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="poisonousBladesRow">
-                    <td><img src="static/images/rogue/poison.png" alt="Poisonous blades"></td>
+                    <td><img src="/static/images/rogue/poison.png" alt="Poisonous blades"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="ricochetRow">
-                    <td><img src="static/images/rogue/ricochet.png" alt="Ricochet"></td>
+                    <td><img src="/static/images/rogue/ricochet.png" alt="Ricochet"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="sinisterStrikeRow">
-                    <td><img src="static/images/rogue/sinister.png" alt="Sinister strike"></td>
+                    <td><img src="/static/images/rogue/sinister.png" alt="Sinister strike"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="flurryOfSteelRow">
-                    <td><img src="static/images/rogue/flurry.png" alt="Flurry of steel"></td>
+                    <td><img src="/static/images/rogue/flurry.png" alt="Flurry of steel"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="bladeShardRow">
-                    <td><img src="static/images/rogue/bladeshard.png" alt="Blade shard"></td>
+                    <td><img src="/static/images/rogue/bladeshard.png" alt="Blade shard"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="trickiestTechRow">
-                    <td><img src="static/images/rogue/trick.png" alt="Trickiest technique"></td>
+                    <td><img src="/static/images/rogue/trick.png" alt="Trickiest technique"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="trickiestTechWithPoisonRow">
-                    <td><img src="static/images/rogue/trick.png" alt="Trickiest technique"><img src="static/images/rogue/poison.png" alt="Poisonous blades"></td>
+                    <td><img src="/static/images/rogue/trick.png" alt="Trickiest technique"><img src="/static/images/rogue/poison.png" alt="Poisonous blades"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="trickiestTechWithPoisonHealRow">
-                    <td><img src="static/images/rogue/trick.png" alt="Trickiest technique"><img src="static/images/rogue/poison.png" alt="Poisonous blades"> (Healing)</td>
+                    <td><img src="/static/images/rogue/trick.png" alt="Trickiest technique"><img src="/static/images/rogue/poison.png" alt="Poisonous blades"> (Healing)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -320,6 +320,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/rogue.js"></script>
+    <script src="/static/js/rogue.js"></script>
 </body>
 </html>
