--- a/warlock.html
+++ b/warlock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Warspear Skills Calculator</title>
 </head>
 <body>
@@ -32,42 +32,42 @@
                         <h2>Your stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/897.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/897.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="magicdmg" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/556.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/3574.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/3574.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="ferocity" step="any">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
                             </div>
                         </div>
 						<div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/907.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/907.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="maxEnergy">
                             </div>
                         </div>
 						<div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/907.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/907.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="lostEnergy" step="any" placeholder="Lost energy">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/4064.webp" alt="Castle attack">
+                            <img src="/static/images/icons/4064.webp" alt="Castle attack">
                             <select id="castleDmg" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="5">5%</option>
@@ -76,14 +76,14 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
-                            <img src="static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
+                            <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
                                 <label class="custom-control-label" for="relicBonus">12%</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <img src="static/images/icons/4063.webp" alt="Castle heal">
+                            <img src="/static/images/icons/4063.webp" alt="Castle heal">
                             <select id="castleHeal" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="10">10%</option>
@@ -92,7 +92,7 @@
                                 <option value="25">25%</option>
                                 <option value="30">30%</option>
                             </select>
-                            <img src="static/images/icons/4151.webp" alt="Healing potion">
+                            <img src="/static/images/icons/4151.webp" alt="Healing potion">
                             <select id="healPot" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="30">30%</option>
@@ -101,7 +101,7 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="static/images/icons/5867.webp" alt="Long death">
+                            <img src="/static/images/icons/5867.webp" alt="Long death">
                             <select id="dotDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -110,7 +110,7 @@
                                 <option value="2">2%</option>
                             </select>
 
-                            <img src="static/images/icons/5869.webp" alt="Moment of power">
+                            <img src="/static/images/icons/5869.webp" alt="Moment of power">
                             <select id="instDmgBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.5">0.5%</option>
@@ -120,7 +120,7 @@
                             </select>
                         </div>
                         <!--<div class="form-group">
-                            <img src="static/images/icons/6990.webp" alt="Incessant penetration">
+                            <img src="/static/images/icons/6990.webp" alt="Incessant penetration">
                             <select id="dotPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -128,7 +128,7 @@
                                 <option value="0.75">0.75%</option>
                             </select>
 
-                            <img src="static/images/icons/5865.webp" alt="Instant penetration">
+                            <img src="/static/images/icons/5865.webp" alt="Instant penetration">
                             <select id="instPenBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="0.25">0.25%</option>
@@ -137,7 +137,7 @@
                             </select>
                         </div>-->
                         <div class="form-group">
-                            <img src="static/images/icons/5924.webp" alt="Bestial rage">
+                            <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -145,7 +145,7 @@
                                 <option value="3">3%</option>
                             </select>
 
-                            <img src="static/images/icons/6989.webp" alt="Predatory delirium">
+                            <img src="/static/images/icons/6989.webp" alt="Predatory delirium">
                             <select id="pveBonusII" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -154,12 +154,12 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="static/images/icons/2534.webp" alt="Arrow of Darkness +">
+                            <img src="/static/images/icons/2534.webp" alt="Arrow of Darkness +">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="arrowBonus">
                                 <label class="custom-control-label" for="arrowBonus" style="margin-right: 35px;">5%</label>
                             </div>
-                             <img src="static/images/icons/2534.webp" alt="Arrow of Darkness + (I)">
+                             <img src="/static/images/icons/2534.webp" alt="Arrow of Darkness + (I)">
                             <select id="arrowBonusI" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
@@ -168,28 +168,28 @@
                             </select>(I)
                         </div>
 						<div class="form-group d-flex align-items-center">
-							<img src="static/images/icons/2890.webp" alt="Shadow Sphere + (I)">
+							<img src="/static/images/icons/2890.webp" alt="Shadow Sphere + (I)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="shadowSphereBonus">
                                 <label class="custom-control-label" for="shadowSphereBonus" style="margin-right: 35px;">10% (I)</label>
                             </div>
                         </div>
 						<div class="form-group d-flex align-items-center">
-                             <img src="static/images/icons/2536.webp" alt="Pool of Darkness + (I/III)">
+                             <img src="/static/images/icons/2536.webp" alt="Pool of Darkness + (I/III)">
                             <select id="poolBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
                                 <option value="2">2%</option>
                                 <option value="3">3%</option>
                             </select>(I/III)
-							<img src="static/images/icons/6970.webp" alt="Acidic Steps" style="margin-left: 10px;">
+							<img src="/static/images/icons/6970.webp" alt="Acidic Steps" style="margin-left: 10px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="acidicSteps">
                                 <label class="custom-control-label" for="acidicSteps" style="margin-right: 35px;">(I)</label>
                             </div>
                         </div>
 						<div class="form-group">
-                             <img src="static/images/icons/5390.webp" alt="Stone Body + (II)">
+                             <img src="/static/images/icons/5390.webp" alt="Stone Body + (II)">
                             <select id="stoneBodyBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -198,7 +198,7 @@
                             </select>(II)
                         </div>
 						<div class="form-group">
-                             <img src="static/images/icons/2525.webp" alt="Draining Life + (III)">
+                             <img src="/static/images/icons/2525.webp" alt="Draining Life + (III)">
                             <select id="drainingLifeBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="1">1%</option>
@@ -207,7 +207,7 @@
                             </select>(III)
                         </div>
 						<div class="form-group d-flex align-items-center">
-							<img src="static/images/icons/2836.webp" alt="Bloody Tribute + (III)">
+							<img src="/static/images/icons/2836.webp" alt="Bloody Tribute + (III)">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="bloodyTributeBonus">
                                 <label class="custom-control-label" for="bloodyTributeBonus" style="margin-right: 35px;">0.5% (III)</label>
@@ -219,13 +219,13 @@
                         <h2>Enemy stats</h2>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/896.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/896.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetMagicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <img src="static/images/icons/552.webp" class="img-fluid" alt="icon">
+                                <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetResilience">
                             </div>
                         </div>
@@ -259,7 +259,7 @@
                 <tr id="arrowOfDarknessRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="static/images/warlock/arrowofdarkness.png" alt="Arrow of Darkness">
+                            <img src="/static/images/warlock/arrowofdarkness.png" alt="Arrow of Darkness">
                         </div>
                     </td>
                     <td>0</td>
@@ -269,7 +269,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="drainingLifeRow">
-                    <td><img src="static/images/warlock/draininglife.png" alt="Draining Life"></td>
+                    <td><img src="/static/images/warlock/draininglife.png" alt="Draining Life"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -277,7 +277,7 @@
 					<td>0</td>
                 </tr>
 				<tr id="drainingLifeHealRow">
-                    <td><img src="static/images/warlock/draininglife.png" alt="Draining Life">(Heal)</td>
+                    <td><img src="/static/images/warlock/draininglife.png" alt="Draining Life">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -285,7 +285,7 @@
 					<td>0</td>
                 </tr>
                 <tr id="poolOfDarknessRow">
-                    <td><img src="static/images/warlock/poolofdarkness.png" alt="Pool of Darkness"></td>
+                    <td><img src="/static/images/warlock/poolofdarkness.png" alt="Pool of Darkness"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -293,50 +293,50 @@
 					<td>0</td>
                 </tr>
                 <tr id="bloodyTributeRow">
-                    <td><img src="static/images/warlock/bloodytribute.png" alt="Bloody Tribute"></td>
+                    <td><img src="/static/images/warlock/bloodytribute.png" alt="Bloody Tribute"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="shadowSphereRow">
-                    <td><img src="static/images/warlock/shadowsphere.png" alt="Shadow Sphere"></td>
+                    <td><img src="/static/images/warlock/shadowsphere.png" alt="Shadow Sphere"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="hexRow">
-                    <td><img src="static/images/warlock/hex.png" alt="Hex"></td>
+                    <td><img src="/static/images/warlock/hex.png" alt="Hex"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="stoneBodyHealRow">
-                    <td><img src="static/images/warlock/stonebody.png" alt="Stone Body">(Heal)</td>
+                    <td><img src="/static/images/warlock/stonebody.png" alt="Stone Body">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="stoneBodyRegenRow">
-                    <td><img src="static/images/warlock/stonebody.png" alt="Stone Body">(Regen)</td>
+                    <td><img src="/static/images/warlock/stonebody.png" alt="Stone Body">(Regen)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr id="underworldFlameRow">
-                    <td><img src="static/images/warlock/underworldflame.png" alt="Underworld Flame"></td>
+                    <td><img src="/static/images/warlock/underworldflame.png" alt="Underworld Flame"></td>
                     <td>0</td>
                 </tr>
                 <tr id="twilightPactHealRow">
-                    <td><img src="static/images/warlock/twilightpact.png" alt="Twilight Pact">(Heal)</td>
+                    <td><img src="/static/images/warlock/twilightpact.png" alt="Twilight Pact">(Heal)</td>
                     <td>0</td>
                 </tr>
 				<tr id="twilightPactRegenRow">
-                    <td><img src="static/images/warlock/twilightpact.png" alt="Twilight Pact">(Regen)</td>
+                    <td><img src="/static/images/warlock/twilightpact.png" alt="Twilight Pact">(Regen)</td>
                     <td>0</td>
                 </tr>
             </tbody>
@@ -347,6 +347,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="static/js/warlock.js"></script>
+    <script src="/static/js/warlock.js"></script>
 </body>
 </html>
